k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: flux-server-service
spec:
  selector:
    app: flux-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
